
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef char WCHAR ;
struct TYPE_2__ {char* FileName; int FileNameLength; int Action; int NextEntryOffset; } ;
typedef scalar_t__ HANDLE ;
typedef TYPE_1__ FILE_NOTIFY_INFORMATION ;
typedef int DWORD ;


 int CreateDirectory (char*,int ) ;
 scalar_t__ CreateFile (char*,int ,int,int *,int ,int ,int *) ;





 int FILE_FLAG_BACKUP_SEMANTICS ;
 int FILE_LIST_DIRECTORY ;
 int FILE_NOTIFY_CHANGE_ATTRIBUTES ;
 int FILE_NOTIFY_CHANGE_CREATION ;
 int FILE_NOTIFY_CHANGE_DIR_NAME ;
 int FILE_NOTIFY_CHANGE_FILE_NAME ;
 int FILE_NOTIFY_CHANGE_LAST_ACCESS ;
 int FILE_NOTIFY_CHANGE_LAST_WRITE ;
 int FILE_NOTIFY_CHANGE_SECURITY ;
 int FILE_NOTIFY_CHANGE_SIZE ;
 int FILE_SHARE_DELETE ;
 int FILE_SHARE_READ ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int OPEN_EXISTING ;
 int ReadDirectoryChangesW (scalar_t__,char*,int,int,int,int *,int *,int *) ;
 int fprintf (int ,char*) ;
 int printf (char*,char*) ;
 int stderr ;
 int stdout ;
 int wprintf (char*,char*,char*) ;

int main(int argc, char *argv[]){
    HANDLE hDir;

 char buf[1024];
 FILE_NOTIFY_INFORMATION * fn;
 int read;
 WCHAR * action = ((void*)0);

 if(argc != 2) {
  printf(
"Usage: %s <directory_path>\n"
" Monitor directory changes with all subdirectories\n"
" For any files, including ones you have no access\n"
" (as on January, 2007)\n"
"(c) Vladimir Dubrovin, 3APA3A\n"
" http://securityvulns.com\n"
" http://securityvulns.ru\n"
"This approach is not reliable and should not be used for audit and another critical operations.\n",
 argv[0]);
  return 1;
 }

 CreateDirectory(argv[1], 0);
 hDir = CreateFile(
   argv[1],
   FILE_LIST_DIRECTORY,
   FILE_SHARE_READ|FILE_SHARE_DELETE,
   ((void*)0),
   OPEN_EXISTING,
   FILE_FLAG_BACKUP_SEMANTICS,
   ((void*)0)
 );
 if(hDir == INVALID_HANDLE_VALUE){
  fprintf(stdout, "Failed to open dir\n");
  return 2;
 }
 for(;;){
     if(!ReadDirectoryChangesW(
  hDir,
  buf,
  1022,
  1,
  FILE_NOTIFY_CHANGE_DIR_NAME | FILE_NOTIFY_CHANGE_FILE_NAME | FILE_NOTIFY_CHANGE_LAST_ACCESS |
   FILE_NOTIFY_CHANGE_ATTRIBUTES | FILE_NOTIFY_CHANGE_SIZE | FILE_NOTIFY_CHANGE_LAST_WRITE |
   FILE_NOTIFY_CHANGE_CREATION | FILE_NOTIFY_CHANGE_SECURITY
  ,
  (DWORD *)&read,
  ((void*)0),
  ((void*)0)
  )) {
   fprintf(stderr, "Failed to read directory changes\n");
   break;
  }
  for (fn = (FILE_NOTIFY_INFORMATION *)buf; ;){
   fn->FileName[fn->FileNameLength/2] = 0;
   switch(fn->Action){
   case 132:
    action = L"added";
    break;
   case 130:
    action = L"removed";
    break;
   case 131:
    action = L"accessed/modified";
    break;
   case 128:
    action = L"renamed (old name)";
    break;
   case 129:
    action = L"renamed (new name)";
    break;
   default:
    action = L"(unknown)";
   }
      wprintf(L"File %s: %s\n", action, fn->FileName);
      if(!fn->NextEntryOffset) break;
      fn = (FILE_NOTIFY_INFORMATION *)(((char *)fn) + fn->NextEntryOffset);
  }
 }
 return 0;

}
